--- a/sub_html/shapeResearch/KimJoeun/KimJoeun.css
+++ b/sub_html/shapeResearch/KimJoeun/KimJoeun.css
@@ -24,6 +24,8 @@ background: #000000;
 /* Rectangle 252 */
 .box{
 position: absolute;
+width: 94.28%;
+height: 4.191%;
 left: 2.9%;
 right: 1.88%;
 top: 82.04%;
